tests/rosetta/transpiler/Clojure/canonicalize-cidr.error
run error: exit status 1
Execution error (ClassCastException) at main/canonicalize (canonicalize-cidr.clj:39).
class java.lang.String cannot be cast to class clojure.lang.IPersistentVector (java.lang.String is in module java.base of loader 'bootstrap'; clojure.lang.IPersistentVector is in unnamed module of loader 'app')

Full report at:
/tmp/clojure-930927773204315985.edn
